--- a/Atom-Counter.cabal
+++ b/Atom-Counter.cabal
@@ -3,7 +3,7 @@ cabal-version:       >=1.10
 --   For further documentation, see http://haskell.org/cabal/users-guide/
 
 name:                Atom-counter
-version:             0.1.0.0
+version:             0.1.1.0
 -- synopsis:
 -- description:
 -- bug-reports:
@@ -19,7 +19,8 @@ extra-source-files:  CHANGELOG.md
 executable Atom-Counter
   main-is:             Main.hs
   other-modules:       App.Parser,
-                       App.Args
+                       App.Args,
+                       App.ToOut
   -- other-extensions:
   build-depends:       base >=4.14 && <4.15,
                        regex-pcre >= 0.94,
