--- a/Atom-Counter.cabal
+++ b/Atom-Counter.cabal
@@ -20,7 +20,8 @@ executable Atom-Counter
   main-is:             Main.hs
   other-modules:       App.Parser,
                        App.Args,
-                       App.ToOut
+                       App.ToOut,
+                       Paths_Atom_counter
   -- other-extensions:
   build-depends:       base >=4.14 && <4.15,
                        regex-pcre >= 0.94,
