--- a/Atom-Counter.cabal
+++ b/Atom-Counter.cabal
@@ -25,5 +25,7 @@ executable Atom-Counter
   -- other-extensions:
   build-depends:       base >=4.14 && <4.15,
                        regex-pcre >= 0.94,
-                       raw-strings-qq >=1.1
+                       raw-strings-qq >=1.1,
+                       mtl >=2.2.1
+
   default-language:    Haskell2010
