--- a/Atom-Counter.cabal
+++ b/Atom-Counter.cabal
@@ -17,11 +17,13 @@ build-type:          Simple
 extra-source-files:  CHANGELOG.md
 
 executable Atom-Counter
+  ghc-options: -haddock
   main-is:             Main.hs
   other-modules:       App.Parser,
                        App.Args,
                        App.ToOut,
                        Paths_Atom_counter
+  extensions: QuasiQuotes
   -- other-extensions:
   build-depends:       base >=4.14 && <4.15,
                        regex-pcre >= 0.94,
