--- a/Atom-Counter.cabal
+++ b/Atom-Counter.cabal
@@ -5,7 +5,7 @@ cabal-version:      >=1.10
 -- http://haskell.org/cabal/users-guide/
 
 name:               Atom-Counter
-version:            0.1.0.0
+version:            0.2.0.0
 
 -- synopsis:
 -- description:
@@ -21,17 +21,25 @@ build-type:         Simple
 extra-source-files: CHANGELOG.md
 
 library
-  exposed-modules:  MyLib
+  exposed-modules:
+    Args
+    Interactive
+    Parser
+    Process
+    ToString
 
   -- other-modules:
   -- other-extensions:
-  build-depends:    base ==4.14.*
+  build-depends:
+      base       >=4.14  && <4.15
+    , haskeline  >=0.8.2
+    , lens >= 5.1
+
   hs-source-dirs:   src
   default-language: Haskell2010
 
 executable Atom-Counter
   main-is:          Main.hs
-  other-modules:    MyLib
 
   -- other-extensions:
   build-depends:
